<resources>
    <string name="app_name">Instagram</string>
    <string name="ivanna_paluch">ivanna.paluch</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="private_information">Private Information</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? <b>Sign up!</b> </string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="enter_full_name_and_password">Enter full name and password</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="change_photo">Change photo</string>
</resources>
