<?xml version="1.0" encoding="utf-8"?>
<paluch.ivanna.instagram.views.KeyboardAwareScrollView
    android:id="@+id/scroll_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <ImageView
            android:id="@+id/instagram_image"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/instagram_logo_black"/>

        <EditText
            android:id="@+id/email_input"
            app:layout_constraintTop_toBottomOf="@+id/instagram_image"
            android:inputType="textEmailAddress"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            style="@style/login_input"/>
        <EditText
            android:id="@+id/password_input"
            app:layout_constraintTop_toBottomOf="@+id/email_input"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/login_input" />

        <Button
            android:id="@+id/login_btn"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            android:text="Log In"
            style="@style/login_btn"/>

        <TextView
            android:id="@+id/create_account_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/don_t_have_account_sign_up"
            android:gravity="center"
            android:background="@drawable/top_border_grey"/>
    </android.support.constraint.ConstraintLayout>
</paluch.ivanna.instagram.views.KeyboardAwareScrollView>